fixed menu display alignment

--- a/client/Components/show_room/show_room.css
+++ b/client/Components/show_room/show_room.css
@@ -279,6 +279,7 @@
   width: 100%!important;
   height: 100%!important;
   min-height: 100%!important;
+  overflow: hidden;
   top: 0%!important;
 }
 
